--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -343,11 +343,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "prime list"
+   ]
   }
  ],
  "metadata": {
