--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -346,8 +346,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "prime list"
+    "Python Program to Print Prime Numbers In a Given Range"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2357"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = int(input()),int(input())\n",
+    "\n",
+    "for i in range(a,b+1):\n",
+    "    for j in range(2,i):\n",
+    "        if i%j == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i,end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sum of Digits of a Number in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Enter the number:\")\n",
+    "sum = 0\n",
+    "\n",
+    "for i in s:\n",
+    "    sum += int(i)\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reverse a Number in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter the number:\"))\n",
+    "\n",
+    "print(str(n)[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Palindrome Program in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\" \")\n",
+    "reverse = (str(a)[::-1])\n",
+    "\n",
+    "if a == reverse:\n",
+    "    print(\"Palindrome\")\n",
+    "else:\n",
+    "    print(\"Not a Palindrome\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check Whether a Given Number is an Armstrong Number or Not in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 Is not Armstrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = input()\n",
+    "armstrong = len(b)\n",
+    "sum = 0\n",
+    "\n",
+    "for i in b:\n",
+    "    sum += int(i)**armstrong\n",
+    "if int(b) == sum:\n",
+    "    print(b,\"Is Armstrong\")\n",
+    "else:\n",
+    "    print(b,\"Is not Armstrong\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the Armstrong Number in a given Range in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = int(input()), int(input())\n",
+    "\n",
+    "for i in range(a,b+1):\n",
+    "    sum = 0\n",
+    "    for j in str(i):\n",
+    "        sum += int(j)**(len(str(i)))\n",
+    "    if i == sum:\n",
+    "        print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
