--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -526,6 +526,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the Fibonacci Series up to Nth Term in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the number: \"))\n",
+    "n1, n2 = 0, 1\n",
+    "for _ in range(a):\n",
+    "    print(n1)\n",
+    "    nth = n1 + n2\n",
+    "    n1 = n2\n",
+    "    n2 = nth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the Nth Term of a Fibonacci Series in Python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the term number: \"))\n",
+    "\n",
+    "n1, n2 = 0, 1\n",
+    "\n",
+    "for _ in range(1, a):\n",
+    "    nth = n1 + n2\n",
+    "    n1 = n2\n",
+    "    n2 = nth\n",
+    "\n",
+    "print(n1 if a == 0 else n2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Factorial of a Number in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 7 is 1\n",
+      "Factorial of 7 is 2\n",
+      "Factorial of 7 is 6\n",
+      "Factorial of 7 is 24\n",
+      "Factorial of 7 is 120\n",
+      "Factorial of 7 is 720\n",
+      "Factorial of 7 is 5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the number: \"))\n",
+    "fact = 1\n",
+    "\n",
+    "for i in range(1, a+1):\n",
+    "    fact = fact * i\n",
+    "    print(\"Factorial of\", a, \"is\", fact)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
