--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -629,6 +629,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python program to find factors of a number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The divisors of 100 are: \n",
+      "1 2 4 5 10 20 25 50 100 "
+     ]
+    }
+   ],
+   "source": [
+    "def printDivisors(n) :\n",
+    "    i = 1\n",
+    "    while i <= n :\n",
+    "        if (n % i==0) :\n",
+    "            print (i,end=\" \")\n",
+    "        i = i + 1\n",
+    "         \n",
+    "print (\"The divisors of 100 are: \")\n",
+    "printDivisors(100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
