--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -662,11 +662,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Find the Power of a Number in Python Language"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input(\"power number: \"))\n",
+    "print(a**b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 power 6 is 15625\n"
+     ]
+    }
+   ],
+   "source": [
+    "#or\n",
+    "a = int(input())\n",
+    "b = int(input(\"power number: \"))\n",
+    "power = a**b\n",
+    "\n",
+    "print(a,\"power\",b,\"is\",power)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the Factors of a Number in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 8, 16, 32, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "f=[]\n",
+    "for i in range(1,a+1):\n",
+    "    if a%i == 0:\n",
+    "        f.append(i)\n",
+    "print(f)"
+   ]
   }
  ],
  "metadata": {
