--- a/Gettingstarted.ipynb
+++ b/Gettingstarted.ipynb
@@ -737,6 +737,77 @@
     "        f.append(i)\n",
     "print(f)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check Whether or Not the Number is a Strong Number in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "145 is a strong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input(\"enter the number\")\n",
+    "s=0\n",
+    "for i in a:\n",
+    "    fact=1\n",
+    "    for j in range(1,int(i)+1):\n",
+    "        fact=fact*j\n",
+    "    s+=fact\n",
+    "if int(a)==s:\n",
+    "    print(a,\"is a strong number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check Whether or Not the Number is a Perfect Number in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is not a perfect number\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"enter number: \"))\n",
+    "p=0\n",
+    "for i in range(1,a):\n",
+    "        if a%i==0:\n",
+    "                p+=i\n",
+    "if p==a:\n",
+    "    print(a,\"is a perfect number\")\n",
+    "else:\n",
+    "    print(a,\"is not a perfect number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
